<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:orientation="vertical">
    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:text="TextView" android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:layout_width="match_parent" android:gravity="center_horizontal"></TextView>
    </LinearLayout>
    <TableLayout android:id="@+id/tableLayout1" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingTop="25dip">
        <TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content" android:layout_width="wrap_content">
            <Button android:text="@string/strMontag" android:layout_height="wrap_content" android:onClick="@string/myClickHandler"  android:id="@+id/button1" android:layout_width="0dip" android:layout_weight="1"></Button>
            <Button android:text="@string/strDienstag" android:layout_height="wrap_content" android:onClick="@string/myClickHandler"  android:id="@+id/button2" android:layout_width="0dip" android:layout_weight="1"></Button>
            <Button android:text="@string/strMittwoch" android:layout_height="wrap_content" android:onClick="@string/myClickHandler"  android:id="@+id/button3" android:layout_width="0dip" android:layout_weight="1"></Button>
        </TableRow>
        <TableRow android:id="@+id/tableRow2"  android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:text="@string/strDonnerstag" android:layout_height="wrap_content" android:onClick="@string/myClickHandler"  android:id="@+id/button4" android:layout_width="0dip" android:layout_weight="1"></Button>
            <Button android:text="@string/strFreitag" android:layout_height="wrap_content" android:onClick="@string/myClickHandler" android:id="@+id/button5" android:layout_width="0dip" android:layout_weight="1"></Button>
            <Button android:text="@string/strSamstag" android:layout_height="wrap_content" android:onClick="@string/myClickHandler" android:id="@+id/button6" android:layout_width="0dip" android:layout_weight="1"></Button>
        </TableRow>
        <TableRow android:id="@+id/tableRow3" android:layout_height="wrap_content" android:layout_width="wrap_content">
            <TextView android:layout_weight="1" android:layout_width="0dip" android:id="@+id/textView3" android:layout_height="wrap_content" android:text="@string/strEmpty"></TextView>
            <Button android:text="@string/strSonntag" android:layout_height="wrap_content" android:onClick="@string/myClickHandler" android:id="@+id/button7" android:layout_width="0dip" android:layout_weight="1"></Button>
            <TextView android:layout_weight="1" android:layout_width="0dip" android:id="@+id/textView4" android:layout_height="wrap_content" android:text="@string/strEmpty"></TextView>
        </TableRow>
    </TableLayout>
    <LinearLayout android:id="@+id/linearLayout2" android:layout_weight="1" android:layout_width="match_parent" android:layout_height="fill_parent" android:orientation="vertical" android:weightSum="1">
        <TextView android:gravity="center_horizontal" android:text="TextView" android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:layout_width="match_parent" android:textColor="@color/clrTime" android:textStyle="bold"></TextView>
        <Button android:text="@string/strStart" android:layout_height="wrap_content" android:layout_width="79dp" android:id="@+id/btnStart" android:layout_gravity="center_horizontal" android:onClick="@string/handlerBtnStart"></Button>

       

    </LinearLayout>
</LinearLayout>
